--- a/requirements.txt
+++ b/requirements.txt
@@ -4,18 +4,55 @@
 #
 #    pip-compile requirements.in
 #
+alifedata-phyloinformatics-convert==0.13.0
+    # via hstrat
+alphinity==0.1.4
+    # via -r requirements.in
+anytree==2.8.0
+    # via
+    #   alifedata-phyloinformatics-convert
+    #   hstrat
+biopython==1.81
+    # via
+    #   alifedata-phyloinformatics-convert
+    #   hstrat
+bitarray==2.7.3
+    # via hstrat
+bitstring==4.0.2
+    # via hstrat
 click==8.1.3
-    # via keyname
+    # via
+    #   alifedata-phyloinformatics-convert
+    #   keyname
 contourpy==1.0.7
     # via matplotlib
 cycler==0.11.0
     # via matplotlib
+dataclasses==0.6
+    # via lyncs-utils
 decorator==5.1.1
     # via retry
+dendropy==4.6.0
+    # via
+    #   alifedata-phyloinformatics-convert
+    #   hstrat
+deprecated==1.2.13
+    # via hstrat
 fonttools==4.39.3
     # via matplotlib
-iterpop==0.4.1
+gitdb==4.0.10
+    # via gitpython
+gitpython==3.1.31
+    # via lyncs-setuptools
+hstrat==1.6.1
     # via -r requirements.in
+interval-search==0.3.1
+    # via hstrat
+iterpop==0.4.1
+    # via
+    #   -r requirements.in
+    #   alifedata-phyloinformatics-convert
+    #   hstrat
 j2cli==0.3.10
     # via -r requirements.in
 jinja2==3.0.0
@@ -25,37 +62,84 @@ jinja2==3.0.0
 keyname==0.5.2
     # via
     #   -r requirements.in
+    #   hstrat
     #   teeplot
 kiwisolver==1.4.4
     # via matplotlib
+lru-dict==1.1.8
+    # via hstrat
+lyncs-setuptools==0.3.1
+    # via lyncs-utils
+lyncs-utils==0.4.5
+    # via alifedata-phyloinformatics-convert
 markupsafe==2.1.2
     # via jinja2
 matplotlib==3.7.1
     # via
+    #   hstrat
     #   seaborn
     #   teeplot
+mmh3==3.1.0
+    # via hstrat
 more-itertools==9.1.0
-    # via keyname
+    # via
+    #   hstrat
+    #   keyname
+mpmath==1.3.0
+    # via hstrat
+multimethod==1.9.1
+    # via pandera
+mypy-extensions==1.0.0
+    # via typing-inspect
+nanto==0.1.1
+    # via alifedata-phyloinformatics-convert
+networkx==3.1
+    # via
+    #   alifedata-phyloinformatics-convert
+    #   hstrat
 numpy==1.21.6
     # via
     #   -r requirements.in
+    #   alifedata-phyloinformatics-convert
+    #   biopython
     #   contourpy
+    #   hstrat
     #   matplotlib
     #   pandas
+    #   pandera
     #   scipy
     #   seaborn
     #   teeplot
+opytional==0.1.0
+    # via
+    #   alifedata-phyloinformatics-convert
+    #   hstrat
+ordered-set==4.1.0
+    # via hstrat
 packaging==23.0
-    # via matplotlib
+    # via
+    #   hstrat
+    #   lyncs-setuptools
+    #   matplotlib
+    #   pandera
 pandas==1.3.5
     # via
     #   -r requirements.in
+    #   alifedata-phyloinformatics-convert
+    #   hstrat
+    #   pandera
     #   seaborn
     #   teeplot
+pandera==0.14.5
+    # via hstrat
 pillow==9.5.0
     # via matplotlib
+prettytable==3.7.0
+    # via hstrat
 py==1.11.0
     # via retry
+pydantic==1.10.7
+    # via pandera
 pyparsing==3.0.9
     # via matplotlib
 python-dateutil==2.8.2
@@ -63,7 +147,9 @@ python-dateutil==2.8.2
     #   matplotlib
     #   pandas
 python-slugify==8.0.1
-    # via teeplot
+    # via
+    #   hstrat
+    #   teeplot
 pytz==2023.3
     # via pandas
 pyyaml==6.0
@@ -74,17 +160,47 @@ retry==0.9.2
     # via
     #   -r requirements.in
     #   keyname
+safe-assert==0.4.0
+    # via hstrat
 scipy==1.7.3
     # via
     #   -r requirements.in
     #   seaborn
 seaborn==0.11.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   hstrat
 six==1.16.0
-    # via python-dateutil
+    # via
+    #   anytree
+    #   python-dateutil
+smmap==5.0.0
+    # via gitdb
+sortedcontainers==2.4.0
+    # via
+    #   alifedata-phyloinformatics-convert
+    #   hstrat
 teeplot==0.5.0
     # via -r requirements.in
 text-unidecode==1.3
     # via python-slugify
 tqdm==4.64.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   hstrat
+typing-extensions==4.5.0
+    # via
+    #   pydantic
+    #   typing-inspect
+typing-inspect==0.8.0
+    # via pandera
+wcwidth==0.2.6
+    # via prettytable
+wrapt==1.15.0
+    # via
+    #   deprecated
+    #   pandera
+
+# The following packages are considered to be unsafe in a requirements file:
+# pip
+# setuptools
