--- a/requirements.txt
+++ b/requirements.txt
@@ -146,8 +146,9 @@ python-dateutil==2.8.2
     # via
     #   matplotlib
     #   pandas
-python-slugify==8.0.1
+python-slugify==7.0.0
     # via
+    #   -r requirements.in
     #   hstrat
     #   teeplot
 pytz==2023.3
