--- a/requirements.in
+++ b/requirements.in
@@ -6,6 +6,7 @@ j2cli==0.3.10
 jinja2==3.0.0
 keyname==0.5.3
 numpy==1.21.6
+multiprocess==0.70.14
 pandas==1.3.5
 python-slugify==7.0
 pyyaml==6.0
@@ -13,5 +14,6 @@ qspool==0.4.2
 retry==0.9.2
 scipy==1.7.3
 seaborn==0.11.0
+tables==3.8.0
 tqdm==4.64.1
 teeplot==0.5.0
