--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,8 @@ bitarray==2.7.3
     # via hstrat
 bitstring==4.0.2
     # via hstrat
+blosc2==2.0.0
+    # via tables
 click==8.1.3
     # via
     #   alifedata-phyloinformatics-convert
@@ -30,6 +32,8 @@ contourpy==1.0.7
     # via matplotlib
 cycler==0.11.0
     # via matplotlib
+cython==0.29.35
+    # via tables
 dataclasses==0.6
     # via lyncs-utils
 decorator==5.1.1
@@ -40,6 +44,8 @@ dendropy==4.6.0
     #   hstrat
 deprecated==1.2.13
     # via hstrat
+dill==0.3.6
+    # via multiprocess
 fonttools==4.39.3
     # via matplotlib
 gitdb==4.0.10
@@ -90,8 +96,12 @@ more-itertools==9.1.0
     #   keyname
 mpmath==1.3.0
     # via hstrat
+msgpack==1.0.5
+    # via blosc2
 multimethod==1.9.1
     # via pandera
+multiprocess==0.70.14
+    # via -r requirements.in
 mypy-extensions==1.0.0
     # via typing-inspect
 nanto==0.1.1
@@ -100,6 +110,8 @@ networkx==3.1
     # via
     #   alifedata-phyloinformatics-convert
     #   hstrat
+numexpr==2.8.4
+    # via tables
 numpy==1.21.6
     # via
     #   -r requirements.in
@@ -109,10 +121,12 @@ numpy==1.21.6
     #   contourpy
     #   hstrat
     #   matplotlib
+    #   numexpr
     #   pandas
     #   pandera
     #   scipy
     #   seaborn
+    #   tables
     #   teeplot
 opytional==0.1.0
     # via
@@ -126,6 +140,7 @@ packaging==23.0
     #   lyncs-setuptools
     #   matplotlib
     #   pandera
+    #   tables
 pandas==1.3.5
     # via
     #   -r requirements.in
@@ -142,6 +157,8 @@ prettytable==3.7.0
     # via hstrat
 py==1.11.0
     # via retry
+py-cpuinfo==9.0.0
+    # via tables
 pydantic==1.10.7
     # via pandera
 pyparsing==3.0.9
@@ -185,6 +202,8 @@ sortedcontainers==2.4.0
     # via
     #   alifedata-phyloinformatics-convert
     #   hstrat
+tables==3.8.0
+    # via -r requirements.in
 teeplot==0.5.0
     # via -r requirements.in
 text-unidecode==1.3
