--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,9 @@ anytree==2.8.0
     # via
     #   alifedata-phyloinformatics-convert
     #   hstrat
-avidascripts @ git+https://github.com/mmore500/AvidaScripts.git@v0.1.3
+appdirs==1.4.4
+    # via avidascripts
+avidascripts @ git+https://github.com/mmore500/AvidaScripts.git@v0.3.0
     # via -r requirements.in
 biopython==1.81
     # via
@@ -67,6 +69,8 @@ jinja2==3.0.0
     # via
     #   -r requirements.in
     #   j2cli
+joblib==1.3.2
+    # via avidascripts
 keyname==0.5.3
     # via
     #   -r requirements.in
@@ -145,6 +149,7 @@ pandas==1.3.5
     # via
     #   -r requirements.in
     #   alifedata-phyloinformatics-convert
+    #   avidascripts
     #   hstrat
     #   pandera
     #   seaborn
@@ -175,7 +180,9 @@ python-slugify==7.0.0
 pytz==2023.3
     # via pandas
 pyyaml==6.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   avidascripts
 qspool==0.4.2
     # via -r requirements.in
 retry==0.9.2
