--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ anytree==2.8.0
     #   hstrat
 appdirs==1.4.4
     # via avidascripts
-avidascripts @ git+https://github.com/mmore500/AvidaScripts.git@v0.5.1
+avidascripts @ git+https://github.com/mmore500/AvidaScripts.git@v0.6.0
     # via -r requirements.in
 biopython==1.81
     # via
@@ -55,7 +55,9 @@ gitdb==4.0.10
 gitpython==3.1.31
     # via lyncs-setuptools
 hstrat==1.6.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   avidascripts
 interval-search==0.3.1
     # via hstrat
 iterpop==0.4.1
@@ -74,6 +76,7 @@ joblib==1.3.2
 keyname==0.5.3
     # via
     #   -r requirements.in
+    #   avidascripts
     #   hstrat
     #   teeplot
 kiwisolver==1.4.4
@@ -135,6 +138,7 @@ numpy==1.21.6
 opytional==0.1.0
     # via
     #   alifedata-phyloinformatics-convert
+    #   avidascripts
     #   hstrat
 ordered-set==4.1.0
     # via hstrat
