--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@
 #
 #    pip-compile requirements.in
 #
-alifedata-phyloinformatics-convert==0.13.0
+alifedata-phyloinformatics-convert==0.14.1
     # via hstrat
 alphinity==0.1.4
     # via -r requirements.in
-anytree==2.8.0
+annotated-types==0.5.0
+    # via pydantic
+anytree==2.9.0
     # via
     #   alifedata-phyloinformatics-convert
     #   hstrat
@@ -20,45 +22,49 @@ biopython==1.81
     # via
     #   alifedata-phyloinformatics-convert
     #   hstrat
-bitarray==2.7.3
-    # via hstrat
-bitstring==4.0.2
+bitarray==2.8.1
+    # via
+    #   bitstring
+    #   hstrat
+bitstring==4.1.2
     # via hstrat
 blosc2==2.0.0
     # via tables
-click==8.1.3
+click==8.1.7
     # via
     #   alifedata-phyloinformatics-convert
     #   keyname
-contourpy==1.0.7
+contourpy==1.1.1
     # via matplotlib
-cycler==0.11.0
+cycler==0.12.0
     # via matplotlib
-cython==0.29.35
+cython==3.0.2
     # via tables
 dataclasses==0.6
     # via lyncs-utils
 decorator==5.1.1
     # via retry
-dendropy==4.6.0
+dendropy==4.6.1
     # via
     #   alifedata-phyloinformatics-convert
     #   hstrat
-deprecated==1.2.13
+deprecated==1.2.14
     # via hstrat
-dill==0.3.6
+dill==0.3.7
     # via multiprocess
-fonttools==4.39.3
+ete3==3.1.3
+    # via alifedata-phyloinformatics-convert
+fonttools==4.42.1
     # via matplotlib
 gitdb==4.0.10
     # via gitpython
-gitpython==3.1.31
+gitpython==3.1.37
     # via lyncs-setuptools
-hstrat==1.6.1
+hstrat @ git+https://github.com/mmore500/hstrat.git@bb738b9227a62f1b02363185b9f3c3d8d82a77e4
     # via
     #   -r requirements.in
     #   avidascripts
-interval-search==0.3.1
+interval-search==0.5.2
     # via hstrat
 iterpop==0.4.1
     # via
@@ -79,33 +85,33 @@ keyname==0.5.3
     #   avidascripts
     #   hstrat
     #   teeplot
-kiwisolver==1.4.4
+kiwisolver==1.4.5
     # via matplotlib
-lru-dict==1.1.8
+lru-dict==1.2.0
     # via hstrat
 lyncs-setuptools==0.3.1
     # via lyncs-utils
 lyncs-utils==0.4.5
     # via alifedata-phyloinformatics-convert
-markupsafe==2.1.2
+markupsafe==2.1.3
     # via jinja2
-matplotlib==3.7.1
+matplotlib==3.8.0
     # via
     #   avidascripts
     #   hstrat
     #   seaborn
     #   teeplot
-mmh3==3.1.0
+mmh3==4.0.1
     # via hstrat
-more-itertools==9.1.0
+more-itertools==10.1.0
     # via
     #   hstrat
     #   keyname
 mpmath==1.3.0
     # via hstrat
-msgpack==1.0.5
+msgpack==1.0.7
     # via blosc2
-multimethod==1.9.1
+multimethod==1.10
     # via pandera
 multiprocess==0.70.14
     # via -r requirements.in
@@ -117,7 +123,7 @@ networkx==3.1
     # via
     #   alifedata-phyloinformatics-convert
     #   hstrat
-numexpr==2.8.4
+numexpr==2.8.7
     # via tables
 numpy==1.21.6
     # via
@@ -142,7 +148,7 @@ opytional==0.1.0
     #   hstrat
 ordered-set==4.1.0
     # via hstrat
-packaging==23.0
+packaging==23.1
     # via
     #   hstrat
     #   lyncs-setuptools
@@ -158,19 +164,21 @@ pandas==1.3.5
     #   pandera
     #   seaborn
     #   teeplot
-pandera==0.14.5
+pandera==0.17.1
     # via hstrat
-pillow==9.5.0
+pillow==10.0.1
     # via matplotlib
-prettytable==3.7.0
+prettytable==3.9.0
     # via hstrat
 py==1.11.0
     # via retry
 py-cpuinfo==9.0.0
     # via tables
-pydantic==1.10.7
+pydantic==2.4.2
     # via pandera
-pyparsing==3.0.9
+pydantic-core==2.10.1
+    # via pydantic
+pyparsing==3.1.1
     # via matplotlib
 python-dateutil==2.8.2
     # via
@@ -181,7 +189,7 @@ python-slugify==7.0.0
     #   -r requirements.in
     #   hstrat
     #   teeplot
-pytz==2023.3
+pytz==2023.3.post1
     # via pandas
 pyyaml==6.0
     # via
@@ -207,7 +215,7 @@ six==1.16.0
     # via
     #   anytree
     #   python-dateutil
-smmap==5.0.0
+smmap==5.0.1
     # via gitdb
 sortedcontainers==2.4.0
     # via
@@ -223,13 +231,18 @@ tqdm==4.64.1
     # via
     #   -r requirements.in
     #   hstrat
-typing-extensions==4.5.0
-    # via
-    #   pydantic
-    #   typing-inspect
-typing-inspect==0.8.0
+typeguard==4.1.5
     # via pandera
-wcwidth==0.2.6
+typing-extensions==4.8.0
+    # via
+    #   hstrat
+    #   pydantic
+    #   pydantic-core
+    #   typeguard
+    #   typing-inspect
+typing-inspect==0.9.0
+    # via pandera
+wcwidth==0.2.7
     # via prettytable
 wrapt==1.15.0
     # via
