--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,6 @@
 alphinity==0.1.4
-git+https://github.com/mmore500/AvidaScripts.git@v0.7.1#egg=AvidaScripts
-git+https://github.com/mmore500/hstrat.git@147c9617e5555f3343a3161c0b9f128fa4e56e12
+git+https://github.com/mmore500/AvidaScripts.git@v0.7.2#egg=AvidaScripts
+hstrat==1.8.5
 iterpop==0.4.1
 j2cli==0.3.10
 jinja2==3.0.0
