--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ anytree==2.9.0
     #   hstrat
 appdirs==1.4.4
     # via avidascripts
-avidascripts @ git+https://github.com/mmore500/AvidaScripts.git@v0.7.1
+avidascripts @ git+https://github.com/mmore500/AvidaScripts.git@v0.7.2
     # via -r requirements.in
 biopython==1.81
     # via
@@ -60,7 +60,7 @@ gitdb==4.0.10
     # via gitpython
 gitpython==3.1.37
     # via lyncs-setuptools
-hstrat @ git+https://github.com/mmore500/hstrat.git@147c9617e5555f3343a3161c0b9f128fa4e56e12
+hstrat==1.8.5
     # via
     #   -r requirements.in
     #   avidascripts
