--- a/requirements.in
+++ b/requirements.in
@@ -7,6 +7,7 @@ jinja2==3.0.0
 keyname==0.5.3
 numpy==1.21.6
 multiprocess==0.70.14
+fastparquet==0.8.3
 pandas==1.3.5
 python-slugify==7.0
 pyyaml==6.0
