--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,8 @@ click==8.1.7
     #   keyname
 contourpy==1.1.1
     # via matplotlib
+cramjam==2.7.0
+    # via fastparquet
 cycler==0.12.0
     # via matplotlib
 cython==3.0.2
@@ -54,8 +56,12 @@ dill==0.3.7
     # via multiprocess
 ete3==3.1.3
     # via alifedata-phyloinformatics-convert
+fastparquet==0.8.3
+    # via -r requirements.in
 fonttools==4.42.1
     # via matplotlib
+fsspec==2023.9.2
+    # via fastparquet
 gitdb==4.0.10
     # via gitpython
 gitpython==3.1.37
@@ -132,6 +138,7 @@ numpy==1.21.6
     #   avidascripts
     #   biopython
     #   contourpy
+    #   fastparquet
     #   hstrat
     #   matplotlib
     #   numexpr
@@ -150,6 +157,7 @@ ordered-set==4.1.0
     # via hstrat
 packaging==23.1
     # via
+    #   fastparquet
     #   hstrat
     #   lyncs-setuptools
     #   matplotlib
@@ -160,6 +168,7 @@ pandas==1.3.5
     #   -r requirements.in
     #   alifedata-phyloinformatics-convert
     #   avidascripts
+    #   fastparquet
     #   hstrat
     #   pandera
     #   seaborn
