--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ anytree==2.9.0
     #   hstrat
 appdirs==1.4.4
     # via avidascripts
-avidascripts @ git+https://github.com/mmore500/AvidaScripts.git@v0.7.6
+avidascripts @ git+https://github.com/mmore500/AvidaScripts.git@v0.7.8
     # via -r requirements.in
 biopython==1.81
     # via
@@ -66,7 +66,7 @@ gitdb==4.0.10
     # via gitpython
 gitpython==3.1.37
     # via lyncs-setuptools
-hstrat==1.8.5
+hstrat @ git+https://github.com/mmore500/hstrat.git@07d5bbaa7f900df297bf5c99cbcede780e5072a0
     # via
     #   -r requirements.in
     #   avidascripts
