Switch fastparquet -> pyarrow to fix overflow err

--- a/requirements.in
+++ b/requirements.in
@@ -9,6 +9,7 @@ numpy==1.21.6
 multiprocess==0.70.14
 fastparquet==0.8.3
 pandas==1.3.5
+pyarrow==12.0.0
 python-slugify==7.0
 pyyaml==6.0
 qspool==0.4.2
